--- a/Google_Clone/index.html
+++ b/Google_Clone/index.html
@@ -27,5 +27,24 @@
     </div>
 
 
+    <div id="bar">
+        <form  action="https://www.google.com/search" method="GET">
+        <input id="bar1"  type="text" name="q" placeholder="search with Google"> 
+        <div id="butbar"> 
+        <input class="btn-small blue" type="submit" value="Google Search">
+        <input class="btn-small blue" type="submit" value="I'm feeling Lucky">
+        </div>
+    </form>
+    </div>
+
+
+        <div id="foot">
+            <Ul>
+                <li>Help</li>
+                <li>Settings</li>
+                <li>Terms and Policy</li>
+
+            </Ul>
+        </div>
 </body>
 </html>
