--- a/Practice_set2/index.html
+++ b/Practice_set2/index.html
@@ -7,6 +7,10 @@
 <body>
     <h1>Hello World</h1>
     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi placeat dolore provident eaque iusto, ut deserunt ipsa cum tempore, explicabo voluptatem repudiandae. Iusto et odio, tempora laudantium at aperiam reprehenderit?</h2>
+    <button onclick="action()" >click on me
+    <p id="hl1">
+    </p>
+    </button>
     <script src="test.js">
     </script>
 </body>
